--- a/thesis/ack.tex
+++ b/thesis/ack.tex
@@ -16,3 +16,6 @@ Lots of people to thank! But I may have to trim this list (sorry)!
     \item notable people from my research groups: nick, nick 2, karlie, alec, jack, mengyan, dawei, james, lyla
     \item people who proofread this thesis: henry, and probably rachel, sarah, jack, adam, elly, jakub
 \end{itemize}
+
+\clearpage
+acknowledgement of country
