--- a/thesis/macros.tex
+++ b/thesis/macros.tex
@@ -190,3 +190,11 @@
 \renewcommand{\sectionautorefname}{Section}%
 \renewcommand{\subsectionautorefname}{Section}%
 \renewcommand{\subsubsectionautorefname}{Section}%
+
+
+\newcommand{\ncomponents}{244~846}
+\newcommand{\nsources}{158~337}
+\newcommand{\nsourceszsp}{34~305}
+\newcommand{\pcsourceszsp}{21.7}
+\newcommand{\nsourcesrlf}{24~743}
+\newcommand{\nnewgiants}{40}
