--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -2292,8 +2292,6 @@ continuum survey of the entire Southern sky at 1.3GHz, extending as far North as
 	shorttitle = {Radio {Galaxy} {Zoo}},
 	url = {http://adsabs.harvard.edu/abs/2019AJ....157..126G},
 	doi = {10.3847/1538-3881/aaff62},
-	abstract = {We study the impact of cluster environment on the morphology of a sample of 4304 extended radio galaxies from Radio Galaxy Zoo. A total of 87\% of the sample lies within a projected 15 Mpc of an optically identified cluster. Brightest cluster galaxies (BCGs) are more likely than other cluster members to be radio sources, and are also moderately bent. The surface density as a function of separation from cluster center of non-BCG radio galaxies follows a power law with index -1.10 ±
-0.03 out to 10 r 500 (∼7 Mpc), which is steeper than the corresponding distribution for optically selected galaxies. Non-BCG radio galaxies are statistically more bent the closer they are to the cluster center. Within the inner 1.5 r 500 (∼1 Mpc) of a cluster, non-BCG radio galaxies are statistically more bent in high-mass clusters than in low-mass clusters. Together, we find that non-BCG sources are statistically more bent in environments that exert greater ram pressure. We use the orientation of bent radio galaxies as an indicator of galaxy orbits and find that they are preferentially in radial orbits. Away from clusters, there is a large population of bent radio galaxies, limiting their use as cluster locators; however, they are still located within statistically overdense regions. We investigate the asymmetry in the tail length of sources that have their tails aligned along the radius vector from the cluster center, and find that the length of the inward-pointing tail is weakly suppressed for sources close to the center of the cluster.},
 	urldate = {2020-07-13},
 	journal = {The Astronomical Journal},
 	author = {Garon, Avery F. and Rudnick, Lawrence and Wong, O. Ivy and Jones, Tom W. and Kim, Jin-Ah and Andernach, Heinz and Shabala, Stanislav S. and Kapińska, Anna D. and Norris, Ray P. and de Gasperin, Francesco and Tate, Jean and Tang, Hongming},
@@ -4741,4 +4739,42 @@ classification.},
 	note = {Conference Name: Materials Science and Engineering Conference Series},
 	pages = {012013},
 	file = {Full Text:C\:\\Users\\matthew\\Zotero\\storage\\D948CJ3D\\Bastien et al. - 2017 - Classifying bent radio galaxies from a mixture of .pdf:application/pdf}
+}
+
+@article{dabhade_discovery_2017,
+	title = {Discovery of giant radio galaxies from {NVSS}: radio and infrared properties},
+	volume = {469},
+	issn = {0035-8711},
+	shorttitle = {Discovery of giant radio galaxies from {NVSS}},
+	url = {http://adsabs.harvard.edu/abs/2017MNRAS.469.2886D},
+	doi = {10.1093/mnras/stx860},
+	abstract = {Giant radio galaxies (GRGs) are one of the largest astrophysical sources in the Universe with an overall projected linear size of ∼0.7 Mpc or more. The last six decades of radio astronomy research has led to the detection of thousands of radio galaxies. However, only ∼300 of them can be classified as GRGs. The reasons behind their large size and rarity are unknown. We carried out a systematic search for these radio giants and found a large sample of GRGs. In this paper, we report the discovery of 25 GRGs from the National Radio Astronomy Observatory Very Large Array Sky Survey, in the red-shift range z ∼ 0.07 to 0.67. Their physical sizes range from ∼0.8 Mpc to ∼4 Mpc. Eight of
+these GRGs have sizes ≥2 Mpc, which is a rarity. Here, for the first time, we investigate the mid-infrared (IR) properties of the optical hosts of the GRGs and classify them securely into various active galactic nuclei types using the WISE mid-IR colours. Using radio and IR data, four of the hosts of the GRGs were observed to be radio-loud quasars that extend up to 2 Mpc in radio size. These GRGs missed detection in earlier searches possibly because of their highly diffuse nature, low surface brightness and lack of optical data. The new GRGs are a significant addition to the existing sample. They will contribute to a better understanding of the physical properties of radio giants.},
+	urldate = {2020-12-09},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	author = {Dabhade, Pratik and Gaikwad, Madhuri and Bagchi, Joydeep and Pandey-Pommier, M. and Sankhyayan, Shishir and Raychaudhury, Somak},
+	month = aug,
+	year = {2017},
+	keywords = {galaxies: active, galaxies: jets, galaxies: nuclei, infrared: galaxies, intergalactic medium, quasars: supermassive black holes},
+	pages = {2886--2906},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\V5GHM9LT\\Dabhade et al. - 2017 - Discovery of giant radio galaxies from NVSS radio.pdf:application/pdf}
+}
+
+@article{dabhade_discovery_2017-1,
+	title = {Discovery of giant radio galaxies from {NVSS}: radio and infrared properties},
+	volume = {469},
+	issn = {0035-8711, 1365-2966},
+	shorttitle = {Discovery of giant radio galaxies from {NVSS}},
+	url = {https://academic.oup.com/mnras/article-lookup/doi/10.1093/mnras/stx860},
+	doi = {10.1093/mnras/stx860},
+	abstract = {Giant radio galaxies (GRGs) are one of the largest astrophysical sources in the Universe with an overall projected linear size of ∼0.7 Mpc or more. The last six decades of radio astronomy research has led to the detection of thousands of radio galaxies. However, only ∼300 of them can be classiﬁed as GRGs. The reasons behind their large size and rarity are unknown. We carried out a systematic search for these radio giants and found a large sample of GRGs. In this paper, we report the discovery of 25 GRGs from the National Radio Astronomy Observatory Very Large Array Sky Survey, in the red-shift range z ∼ 0.07 to 0.67. Their physical sizes range from ∼0.8 Mpc to ∼4 Mpc. Eight of these GRGs have sizes ≥2 Mpc, which is a rarity. Here, for the ﬁrst time, we investigate the mid-infrared (IR) properties of the optical hosts of the GRGs and classify them securely into various active galactic nuclei types using the WISE mid-IR colours. Using radio and IR data, four of the hosts of the GRGs were observed to be radio-loud quasars that extend up to 2 Mpc in radio size. These GRGs missed detection in earlier searches possibly because of their highly diffuse nature, low surface brightness and lack of optical data. The new GRGs are a signiﬁcant addition to the existing sample. They will contribute to a better understanding of the physical properties of radio giants.},
+	language = {en},
+	number = {3},
+	urldate = {2020-12-09},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	author = {Dabhade, Pratik and Gaikwad, Madhuri and Bagchi, Joydeep and Pandey-Pommier, M. and Sankhyayan, Shishir and Raychaudhury, Somak},
+	month = aug,
+	year = {2017},
+	pages = {2886--2906},
+	file = {Dabhade et al. - 2017 - Discovery of giant radio galaxies from NVSS radio.pdf:C\:\\Users\\matthew\\Zotero\\storage\\8DPMGCWZ\\Dabhade et al. - 2017 - Discovery of giant radio galaxies from NVSS radio.pdf:application/pdf}
 }
