--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -33,6 +33,7 @@
 \addbibresource{thesis.bib}
 \addbibresource{atlas.bib}
 \addbibresource{sugar-glider.bib}
+\addbibresource{extended-rlf.bib}
 
 \usepackage[normalem]{ulem}
 \usepackage[table]{xcolor}
